update the PWD Adapter with a new PWDDataParser